moved things around for icml space constraints, and start to go over charles intro

--- a/test_accuracy_paper/icml_test_accuracy.tex
+++ b/test_accuracy_paper/icml_test_accuracy.tex
@@ -22,8 +22,8 @@
 \usepackage{amsmath}
 %\usepackage{makecell}
 \usepackage{amssymb}
-%\usepackage{enumitem}
-%\setlist[itemize,1]{leftmargin=*,wide=0em, noitemsep,nolistsep}
+\usepackage{enumitem}
+\setlist[itemize,1]{leftmargin=*,wide=0em, noitemsep,nolistsep}
 
 \newcommand{\fix}[1]{\textcolor{red}{#1}}
 \newcommand{\comment}[1]{\textcolor{blue}{#1}}
