--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -2949,7 +2949,7 @@
 
 @MISC{MM18_unpub_work,
   author =    {C. H. Martin and M. W. Mahoney},
-  title =     {Unpublished Results.},
+  title =     {Unpublished Results},
   year =      {2018},
 }
 
